Revert to JDK8 and use libdave-jvm instead