@@ -3,24 +3,17 @@ dependencies {
     api 'com.discord4j:simple-fsm:1.0.1'
 
     implementation 'com.google.crypto.tink:tink:1.15.0'
-    implementation 'club.minnced:jdave-api:0.1.7'
-    runtimeOnly 'club.minnced:jdave-native-linux-x86-64:0.1.7'
-    runtimeOnly 'club.minnced:jdave-native-linux-aarch64:0.1.7'
-    runtimeOnly 'club.minnced:jdave-native-win-x86-64:0.1.7'
-    runtimeOnly 'club.minnced:jdave-native-darwin:0.1.7'
+    implementation 'moe.kyokobot.libdave:api:0.1.2'
+    implementation 'moe.kyokobot.libdave:impl-jni:0.1.2'
+    runtimeOnly 'moe.kyokobot.libdave:natives-linux-x86-64:0.1.2'
+    runtimeOnly 'moe.kyokobot.libdave:natives-linux-aarch64:0.1.2'
+    runtimeOnly 'moe.kyokobot.libdave:natives-win-x86-64:0.1.2'
+    runtimeOnly 'moe.kyokobot.libdave:natives-darwin:0.1.2'
 
     testImplementation platform("org.junit:junit-bom:$junit_version")
     testImplementation "org.junit.jupiter:junit-jupiter-engine"
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:"
     testImplementation "ch.qos.logback:logback-classic:$logback_version"
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs '--enable-native-access=ALL-UNNAMED'
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.release = 25
 }
 
 javadoc {
